programa.output
State 91 conflicts: 1 shift/reduce
State 121 conflicts: 2 reduce/reduce
State 189 conflicts: 2 reduce/reduce


Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: COMIENZO_ALGORITMO IDENTIFICADOR DELIMITADOR cabecera_alg bloque_alg FIN_ALGORITMO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal PRECONDICION

    3 bloque_alg: bloque POSTCONDICION

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_const decl_globales
    6              | ε

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | ε

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_const declaraciones
   13              | declaracion_var declaraciones
   14              | ε

   15 declaracion_tipo: COMIENZO_TIPO lista_d_tipo FIN_TIPO DELIMITADOR

   16 declaracion_const: COMIENZO_CONSTANTES lista_d_cte FIN_CONSTANTES DELIMITADOR

   17 declaracion_var: COMIENZO_VAR lista_d_var FIN_VAR DELIMITADOR

   18 lista_d_tipo: IDENTIFICADOR IGUAL d_tipo SEPARADOR lista_d_tipo
   19             | ε

   20 d_tipo: COMIENZO_TUPLA lista_campos FIN_TUPLA
   21       | COMIENZO_TABLA COMIENZO_INDICE expresion_t RANGO expresion_t FIN_INDICE DECLARADOR_TIPO_TABLA d_tipo
   22       | IDENTIFICADOR
   23       | expresion_t RANGO expresion_t
   24       | REFERENCIA d_tipo
   25       | TIPO

   26 expresion_t: expresion
   27            | LITERAL_CARACTER

   28 lista_campos: IDENTIFICADOR DECLARADOR_TIPO d_tipo DELIMITADOR lista_campos
   29             | ε

   30 lista_d_cte: IDENTIFICADOR IGUAL literal DELIMITADOR lista_d_cte
   31            | ε

   32 literal: LITERAL_BOOLEANO
   33        | LITERAL_CADENA
   34        | LITERAL_CARACTER
   35        | LITERAL_ENTERO
   36        | LITERAL_REAL

   37 lista_d_var: lista_id DECLARADOR_TIPO d_tipo DELIMITADOR lista_d_var
   38            | ε

   39 lista_id: IDENTIFICADOR SEPARADOR lista_id
   40         | IDENTIFICADOR_BOOLEANO SEPARADOR lista_id
   41         | IDENTIFICADOR
   42         | IDENTIFICADOR_BOOLEANO

   43 decl_ent_sal: ENTRADA_SALIDA lista_d_var
   44             | ENTRADA_SALIDA lista_d_var ENTRADA_SALIDA lista_d_var

   45 expresion: exp_a
   46          | exp_b
   47          | funcion_ll

   48 exp_a: exp_a OPERADORES_SUMA exp_a
   49      | exp_a OPERADORES_MULTIPLICACION exp_a
   50      | COMIENZO_PARENTESIS exp_a FIN_PARENTESIS
   51      | operando
   52      | literal_numerico
   53      | OPERADORES_SUMA exp_a

   54 literal_numerico: LITERAL_ENTERO
   55                 | LITERAL_REAL

   56 exp_b: exp_b OPERADORES_BOOLEANOS m exp_b
   57      | NEGACION exp_b
   58      | operando_b
   59      | LITERAL_BOOLEANO
   60      | expresion COMPARADORES expresion
   61      | expresion IGUAL expresion
   62      | COMIENZO_PARENTESIS exp_b FIN_PARENTESIS

   63 m: ε

   64 operando: IDENTIFICADOR
   65         | operando PUNTERO operando
   66         | operando COMIENZO_INDICE expresion FIN_INDICE
   67         | operando REFERENCIA

   68 operando_b: IDENTIFICADOR_BOOLEANO

   69 instrucciones: instruccion DELIMITADOR instrucciones
   70              | instruccion

   71 instruccion: CONTINUAR
   72            | asignacion
   73            | alternativa
   74            | iteracion
   75            | accion_ll

   76 asignacion: operando ASIGNACION exp_a
   77           | operando_b ASIGNACION exp_b

   78 alternativa: COMIENZO_SI expresion ENTONCES instrucciones lista_opciones FIN_SI

   79 lista_opciones: ELSE expresion ENTONCES instrucciones lista_opciones
   80               | ε

   81 iteracion: it_cota_fija
   82          | it_cota_exp

   83 it_cota_exp: COMIENZO_BUCLE_MIENTRAS expresion COMIENZO_BUCLE_HACER instrucciones FIN_BUCLE_MIENTRAS

   84 it_cota_fija: COMIENZO_BUCLE_PARA IDENTIFICADOR ASIGNACION expresion HASTA expresion COMIENZO_BUCLE_HACER instrucciones FIN_BUCLE_PARA

   85 accion_d: COMIENZO_ACCION a_cabecera bloque FIN_ACCION

   86 funcion_d: COMIENZO_FUNCION f_cabecera bloque RETORNO expresion FIN_FUNCION

   87 a_cabecera: IDENTIFICADOR COMIENZO_PARENTESIS d_par_form FIN_PARENTESIS DELIMITADOR

   88 f_cabecera: IDENTIFICADOR COMIENZO_PARENTESIS lista_d_var FIN_PARENTESIS RETORNO d_tipo DELIMITADOR

   89 d_par_form: d_p_form DELIMITADOR d_par_form
   90           | ε

   91 d_p_form: ENTRADA_SALIDA lista_id DECLARADOR_TIPO d_tipo

   92 accion_ll: IDENTIFICADOR COMIENZO_PARENTESIS l_ll FIN_PARENTESIS

   93 funcion_ll: IDENTIFICADOR COMIENZO_PARENTESIS l_ll FIN_PARENTESIS

   94 l_ll: expresion SEPARADOR l_ll
   95     | expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LITERAL_CARACTER (258) 27 34
    ASIGNACION (259) 76 77 84
    DELIMITADOR (260) 1 15 16 17 28 30 37 69 87 88 89
    SEPARADOR (261) 18 39 40 94
    COMIENZO_ALGORITMO (262) 1
    FIN_ALGORITMO (263) 1
    COMIENZO_PARENTESIS (264) 50 62 87 88 92 93
    FIN_PARENTESIS (265) 50 62 87 88 92 93
    COMIENZO_ACCION (266) 85
    FIN_ACCION (267) 85
    COMIENZO_FUNCION (268) 86
    FIN_FUNCION (269) 86
    COMIENZO_CONSTANTES (270) 16
    FIN_CONSTANTES (271) 16
    COMIENZO_BUCLE_MIENTRAS (272) 83
    FIN_BUCLE_MIENTRAS (273) 83
    COMIENZO_BUCLE_HACER (274) 83 84
    HASTA (275) 84
    COMIENZO_BUCLE_PARA (276) 84
    FIN_BUCLE_PARA (277) 84
    COMIENZO_VAR (278) 17
    FIN_VAR (279) 17
    DECLARADOR_TIPO (280) 28 37 91
    COMIENZO_SI (281) 78
    FIN_SI (282) 78
    ENTONCES (283) 78 79
    ELSE (284) 79
    RETORNO (285) 86 88
    NEGACION (286) 57
    PRECONDICION (287) 2
    POSTCONDICION (288) 3
    COMIENZO_TIPO (289) 15
    FIN_TIPO (290) 15
    COMIENZO_TUPLA (291) 20
    FIN_TUPLA (292) 20
    COMIENZO_TABLA (293) 21
    RANGO (294) 21 23
    DECLARADOR_TIPO_TABLA (295) 21
    COMIENZO_INDICE (296) 21 66
    FIN_INDICE (297) 21 66
    REFERENCIA (298) 24 67
    PUNTERO (299) 65
    CONTINUAR (300) 71
    LITERAL_REAL <real> (301) 36 55
    LITERAL_CADENA <cadena> (302) 33
    IDENTIFICADOR_BOOLEANO <cadena> (303) 40 42 68
    IDENTIFICADOR <cadena> (304) 1 18 22 28 30 39 41 64 84 87 88 92 93
    LITERAL_ENTERO <entero> (305) 35 54
    OPERADORES_MULTIPLICACION <entero> (306) 49
    OPERADORES_SUMA <entero> (307) 48 53
    LITERAL_BOOLEANO <entero> (308) 32 59
    IGUAL <entero> (309) 18 30 61
    COMPARADORES <entero> (310) 60
    TIPO <entero> (311) 25
    ENTRADA_SALIDA <entero> (312) 43 44 91
    OPERADORES_BOOLEANOS <entero> (313) 56


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    desc_algoritmo (60)
        on left: 1
        on right: 0
    cabecera_alg (61)
        on left: 2
        on right: 1
    bloque_alg (62)
        on left: 3
        on right: 1
    decl_globales (63)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (64)
        on left: 7 8 9
        on right: 2 7 8
    bloque (65)
        on left: 10
        on right: 3 85 86
    declaraciones (66)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo (67)
        on left: 15
        on right: 4 11
    declaracion_const (68)
        on left: 16
        on right: 5 12
    declaracion_var (69)
        on left: 17
        on right: 13
    lista_d_tipo (70)
        on left: 18 19
        on right: 15 18
    d_tipo <type> (71)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 28 37 88 91
    expresion_t (72)
        on left: 26 27
        on right: 21 23
    lista_campos (73)
        on left: 28 29
        on right: 20 28
    lista_d_cte (74)
        on left: 30 31
        on right: 16 30
    literal (75)
        on left: 32 33 34 35 36
        on right: 30
    lista_d_var <listaId> (76)
        on left: 37 38
        on right: 17 37 43 44 88
    lista_id <listaId> (77)
        on left: 39 40 41 42
        on right: 37 39 40 91
    decl_ent_sal (78)
        on left: 43 44
        on right: 2
    expresion <expresion> (79)
        on left: 45 46 47
        on right: 26 60 61 66 78 79 83 84 86 94 95
    exp_a <expresion> (80)
        on left: 48 49 50 51 52 53
        on right: 45 48 49 50 53 76
    literal_numerico <expresion> (81)
        on left: 54 55
        on right: 52
    exp_b <expresion_bool> (82)
        on left: 56 57 58 59 60 61 62
        on right: 46 56 57 62 77
    m <param> (83)
        on left: 63
        on right: 56
    operando <expresion> (84)
        on left: 64 65 66 67
        on right: 51 65 66 67 76
    operando_b <expresion> (85)
        on left: 68
        on right: 58 77
    instrucciones (86)
        on left: 69 70
        on right: 10 69 78 79 83 84
    instruccion (87)
        on left: 71 72 73 74 75
        on right: 69 70
    asignacion <expresion> (88)
        on left: 76 77
        on right: 72
    alternativa (89)
        on left: 78
        on right: 73
    lista_opciones (90)
        on left: 79 80
        on right: 78 79
    iteracion (91)
        on left: 81 82
        on right: 74
    it_cota_exp (92)
        on left: 83
        on right: 82
    it_cota_fija (93)
        on left: 84
        on right: 81
    accion_d (94)
        on left: 85
        on right: 7
    funcion_d (95)
        on left: 86
        on right: 8
    a_cabecera (96)
        on left: 87
        on right: 85
    f_cabecera (97)
        on left: 88
        on right: 86
    d_par_form (98)
        on left: 89 90
        on right: 87 89
    d_p_form (99)
        on left: 91
        on right: 89
    accion_ll (100)
        on left: 92
        on right: 75
    funcion_ll (101)
        on left: 93
        on right: 47
    l_ll (102)
        on left: 94 95
        on right: 92 93 94


State 0

    0 $accept: • desc_algoritmo $end

    COMIENZO_ALGORITMO  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: COMIENZO_ALGORITMO • IDENTIFICADOR DELIMITADOR cabecera_alg bloque_alg FIN_ALGORITMO

    IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo • $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: COMIENZO_ALGORITMO IDENTIFICADOR • DELIMITADOR cabecera_alg bloque_alg FIN_ALGORITMO

    DELIMITADOR  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end •

    $default  accept


State 5

    1 desc_algoritmo: COMIENZO_ALGORITMO IDENTIFICADOR DELIMITADOR • cabecera_alg bloque_alg FIN_ALGORITMO

    COMIENZO_CONSTANTES  shift, and go to state 6
    COMIENZO_TIPO        shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    cabecera_alg       go to state 8
    decl_globales      go to state 9
    declaracion_tipo   go to state 10
    declaracion_const  go to state 11


State 6

   16 declaracion_const: COMIENZO_CONSTANTES • lista_d_cte FIN_CONSTANTES DELIMITADOR

    IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 31 (lista_d_cte)

    lista_d_cte  go to state 13


State 7

   15 declaracion_tipo: COMIENZO_TIPO • lista_d_tipo FIN_TIPO DELIMITADOR

    IDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 19 (lista_d_tipo)

    lista_d_tipo  go to state 15


State 8

    1 desc_algoritmo: COMIENZO_ALGORITMO IDENTIFICADOR DELIMITADOR cabecera_alg • bloque_alg FIN_ALGORITMO

    COMIENZO_CONSTANTES  shift, and go to state 6
    COMIENZO_VAR         shift, and go to state 16
    COMIENZO_TIPO        shift, and go to state 7

    $default  reduce using rule 14 (declaraciones)

    bloque_alg         go to state 17
    bloque             go to state 18
    declaraciones      go to state 19
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 9

    2 cabecera_alg: decl_globales • decl_a_f decl_ent_sal PRECONDICION

    COMIENZO_ACCION   shift, and go to state 23
    COMIENZO_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 25
    accion_d   go to state 26
    funcion_d  go to state 27


State 10

    4 decl_globales: declaracion_tipo • decl_globales

    COMIENZO_CONSTANTES  shift, and go to state 6
    COMIENZO_TIPO        shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales      go to state 28
    declaracion_tipo   go to state 10
    declaracion_const  go to state 11


State 11

    5 decl_globales: declaracion_const • decl_globales

    COMIENZO_CONSTANTES  shift, and go to state 6
    COMIENZO_TIPO        shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales      go to state 29
    declaracion_tipo   go to state 10
    declaracion_const  go to state 11


State 12

   30 lista_d_cte: IDENTIFICADOR • IGUAL literal DELIMITADOR lista_d_cte

    IGUAL  shift, and go to state 30


State 13

   16 declaracion_const: COMIENZO_CONSTANTES lista_d_cte • FIN_CONSTANTES DELIMITADOR

    FIN_CONSTANTES  shift, and go to state 31


State 14

   18 lista_d_tipo: IDENTIFICADOR • IGUAL d_tipo SEPARADOR lista_d_tipo

    IGUAL  shift, and go to state 32


State 15

   15 declaracion_tipo: COMIENZO_TIPO lista_d_tipo • FIN_TIPO DELIMITADOR

    FIN_TIPO  shift, and go to state 33


State 16

   17 declaracion_var: COMIENZO_VAR • lista_d_var FIN_VAR DELIMITADOR

    IDENTIFICADOR_BOOLEANO  shift, and go to state 34
    IDENTIFICADOR           shift, and go to state 35

    $default  reduce using rule 38 (lista_d_var)

    lista_d_var  go to state 36
    lista_id     go to state 37


State 17

    1 desc_algoritmo: COMIENZO_ALGORITMO IDENTIFICADOR DELIMITADOR cabecera_alg bloque_alg • FIN_ALGORITMO

    FIN_ALGORITMO  shift, and go to state 38


State 18

    3 bloque_alg: bloque • POSTCONDICION

    POSTCONDICION  shift, and go to state 39


State 19

   10 bloque: declaraciones • instrucciones

    COMIENZO_BUCLE_MIENTRAS  shift, and go to state 40
    COMIENZO_BUCLE_PARA      shift, and go to state 41
    COMIENZO_SI              shift, and go to state 42
    CONTINUAR                shift, and go to state 43
    IDENTIFICADOR_BOOLEANO   shift, and go to state 44
    IDENTIFICADOR            shift, and go to state 45

    operando       go to state 46
    operando_b     go to state 47
    instrucciones  go to state 48
    instruccion    go to state 49
    asignacion     go to state 50
    alternativa    go to state 51
    iteracion      go to state 52
    it_cota_exp    go to state 53
    it_cota_fija   go to state 54
    accion_ll      go to state 55


State 20

   11 declaraciones: declaracion_tipo • declaraciones

    COMIENZO_CONSTANTES  shift, and go to state 6
    COMIENZO_VAR         shift, and go to state 16
    COMIENZO_TIPO        shift, and go to state 7

    $default  reduce using rule 14 (declaraciones)

    declaraciones      go to state 56
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 21

   12 declaraciones: declaracion_const • declaraciones

    COMIENZO_CONSTANTES  shift, and go to state 6
    COMIENZO_VAR         shift, and go to state 16
    COMIENZO_TIPO        shift, and go to state 7

    $default  reduce using rule 14 (declaraciones)

    declaraciones      go to state 57
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 22

   13 declaraciones: declaracion_var • declaraciones

    COMIENZO_CONSTANTES  shift, and go to state 6
    COMIENZO_VAR         shift, and go to state 16
    COMIENZO_TIPO        shift, and go to state 7

    $default  reduce using rule 14 (declaraciones)

    declaraciones      go to state 58
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 23

   85 accion_d: COMIENZO_ACCION • a_cabecera bloque FIN_ACCION

    IDENTIFICADOR  shift, and go to state 59

    a_cabecera  go to state 60


State 24
